<resources>
    <string name="app_name">CarService</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook Sign in Configurations-->
    <string name="facebook_app_id">2589036221181624</string>
    <string name="fb_login_protocol_scheme">fb2589036221181624</string>

    <!-- Texts -->
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="car_service">Car Service</string>
    <string name="your_road_assistance_partner">Your Road Assistance Partner</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="i_accept_all_the_terms_and_conditions">I accept all the terms and conditions</string>
    <string name="remember_me">Remember me</string>
    <string name="fill_the_form_to_create_an_account">Fill the form to create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_continue_using_our_app">Sign in to continue using our app</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="app_logo">app_logo</string>
    <string name="img_mail">img_mail</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="homepage">Homepage</string>
    <string name="settings">Settings</string>
    <string name="place_holder">Place holder</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="cars">Cars</string>
    <string name="settings_amp_account"><![CDATA[Settings & Account]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="car_center">Car Center</string>
    <string name="want_to_visit_us">want to visit us?</string>
    <string name="emergency">Emergency</string>
    <string name="need_help">need help?</string>
    <string name="delivery">Delivery</string>
    <string name="too_busy">too busy?</string>
    <string name="about_us">About us</string>
    <string name="who_are_we">who are we?</string>
    <string name="add_your_car">Add your car</string>
    <string name="please_select">Please Select</string>
    <string name="year">Year</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="overview">overview</string>
    <string name="overview_description">Car Service App Provides for you a lot of service such as setting a date to check your car, provide quick emergency assistance on the road and possibility of buying spare parts of your car online.</string>
    <string name="call_us">Call us</string>
    <string name="location">Location</string>
    <string name="carserviceshared8_gmail_com">CarServiceShared8@gmail.com</string>
    <string name="open_hours">Open hours</string>
    <string name="personal_details">Personal Details</string>
    <string name="show_notifications">Show notifications</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_your_car_to_get_additional_services">Add your car to get additional services</string>
    <string name="add_car">Add car</string>
    <string name="emergency_description">wherever you are, we are with you through few clicks and Within less than a minute you can request a tow truck to transport your car to any location</string>
    <string name="request_a_tow_truck">Request a tow truck</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="check_out">Check Out</string>
    <string name="maintenance_amp_repair"><![CDATA[Maintenance & Repair]]></string>
    <string name="car_care">Car Care</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="marker">marker</string>
    <string name="university_address"><![CDATA[Culture & Science City, Second 6th of October]]></string>
    <string name="appointments_amp_orders"><![CDATA[Appointments & Orders]]></string>
    <string name="tracking">Tracking</string>
    <string name="call_assistance">Call Assistance</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="estimated_time_of_arrival">Estimated time of arrival</string>
    <string name="service_type">Service Type</string>
    <string name="click_to_select_service">Click to select Service</string>
    <string name="please_select_a_service_first">Please Select a Service First</string>
    <string name="finish">Finish</string>
    <string name="speed_fix">Speed Fix</string>
    <string name="order_a_mechanic_to_come_and_fix_a_specific_issue_with_your_car">Order a mechanic to come and fix a specific issue with your car</string>
    <string name="categories">Categories</string>
    <string name="have_a_look_on_all_the_available_spare_parts_for_your_car">Have a look on all the available spare parts for your car.</string>
    <string name="please_select_which_service_you_want">Please select which service you want.</string>
    <string name="type_any_additional_notes_about_your_problem">type any additional notes about your problem</string>
    <string name="type_here">Type Here...</string>
    <string name="order_now">Order Now</string>
    <string name="default_address">Click on edit to add an address</string>
    <string name="default_phoneNumber">Click on edit to add a phone number </string>
    <string name="default_username">Click on edit to add a username </string>
    <string name="order_summery">Order Summery</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cancel">Cancel</string>
    <string name="order_successful">Order Successful</string>
    <string name="order_description">Thank you for purchasing. Your order will be shipped in 1-5 working days.</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="your_orders">Your Orders</string>
    <string name="you_don_t_have_any_appointments_or_orders">You Don\'t Have any Appointments or Orders</string>
    <string name="no_spare_parts_available_for_this_car">No spare parts available for this car</string>
    <string name="available_products">Available Products</string>
</resources>
