<?xml version="1.0" encoding="utf-8"?>
<!--Modified By Mahmoud Badawy-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8sdp"
    tools:context=".activity.RegistrationActivity">


    <EditText
        android:id="@+id/registration_et_firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120sdp"
        android:hint="@string/hint_first_name"
        android:textColorHint="@color/black"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registration_et_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/hint_last_name"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_et_firstName" />

    <EditText
        android:id="@+id/registration_et_emailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/hint_email_address"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_et_lastName" />

    <EditText
        android:id="@+id/registration_et_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_et_emailAddress" />

    <EditText
        android:id="@+id/registration_et_confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:hint="@string/hint_confirm_password"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_et_Password" />


    <Button
        android:id="@+id/registration_btn_createAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_15sdp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_et_confirmPassword" />


    <TextView
        android:id="@+id/registration_tv_alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_btn_createAccount" />
    <TextView
        android:id="@+id/registration_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/registration_tv_alreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/registration_btn_createAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>