<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".fragment.AboutUsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/headerCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/aboutUs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_sb"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/aboutUs_navMenuBtn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:src="@drawable/ic_menu_black"
                app:layout_constraintBottom_toBottomOf="@id/aboutUs_label"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/aboutUs_label"
                app:layout_constraintTop_toTopOf="@id/aboutUs_label"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <!-- Overview -->
    <TextView
        android:id="@+id/aboutUs_overviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerCard" />

    <ImageView
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:src="@drawable/ic_two_arrows"
        app:layout_constraintBottom_toBottomOf="@id/aboutUs_overviewLabel"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_overviewLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutUs_overviewLabel"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/aboutUs_overviewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/overview_description"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/aboutUs_overviewLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_overviewLabel" />

    <!-- Open hours -->
    <ImageView
        android:id="@+id/aboutUs_redClock"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="@drawable/ic_red_clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_overviewDescription"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/aboutUs_openHoursLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="@string/open_hours"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/aboutUs_redClock"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redClock"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutUs_redClock" />


    <TextView
        android:id="@+id/aboutUs_openHoursDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="9 AM - 9 PM"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redClock"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_openHoursLabel" />

    <TextView
        android:id="@+id/aboutUs_lineUnderHour"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/grey_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_openHoursDescription" />


    <!-- Phone Number -->

    <ImageView
        android:id="@+id/aboutUs_redPhone"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="@drawable/ic_red_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_lineUnderHour"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/aboutUs_phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/aboutUs_redPhone"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redPhone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutUs_redPhone" />


    <TextView
        android:id="@+id/aboutUs_phoneNumberDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="+xx xxxxxxxxxxx"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redPhone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_phoneNumberLabel" />

    <TextView
        android:id="@+id/aboutUs_lineUnderPhone"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/grey_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_phoneNumberDescription" />


    <!-- Email Address -->

    <ImageView
        android:id="@+id/aboutUs_redEmail"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="@drawable/ic_red_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_lineUnderPhone"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/aboutUs_emailAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/aboutUs_redEmail"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutUs_redEmail" />


    <TextView
        android:id="@+id/aboutUs_emailAddressDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="@string/carserviceshared8_gmail_com"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_emailAddressLabel" />

    <TextView
        android:id="@+id/aboutUs_lineUnderEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/grey_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_emailAddressDescription" />



    <!-- Location -->

    <ImageView
        android:id="@+id/aboutUs_redMarker"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:src="@drawable/ic_red_marker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutUs_lineUnderEmail"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/aboutUs_locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui_regular"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/aboutUs_redMarker"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@id/aboutUs_redMarker"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutUs_redMarker" />


    <!-- Call us -->
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/style_btn_create_account"
        android:padding="@dimen/_6sdp"
        android:text="@string/call_us"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>